src/objects/Custom_Survey_Answer__c.object
<CustomObject>
    <fields>
        <fullName>Custom_Survey_Option__c</fullName>
        <label>選択肢</label>
        <referenceTo>Custom_Survey_Option__c</referenceTo>
        <relationshipLabel>カスタムアンケート 回答</relationshipLabel>
        <relationshipName>Custom_Survey_Answer</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Free_Form__c</fullName>
        <label>自由回答欄</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Guest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ゲスト</label>
        <referenceTo>Guest__c</referenceTo>
        <relationshipLabel>カスタムアンケート 回答</relationshipLabel>
        <relationshipName>Custom_Survey_Answer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Session__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>セッション</label>
        <referenceTo>Session__c</referenceTo>
        <relationshipLabel>カスタムアンケート 回答</relationshipLabel>
        <relationshipName>Custom_Survey_Answer</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>カスタムアンケート 回答</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Custom_Survey_Option__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <displayFormat>CSA-{00000000}</displayFormat>
        <label>回答番号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>session_must_match_parent</fullName>
        <active>true</active>
        <errorConditionFormula>Session__c &lt;&gt; Custom_Survey_Option__r.Session__c</errorConditionFormula>
        <errorDisplayField>Session__c</errorDisplayField>
        <errorMessage>Session does not match parent&apos;s session.</errorMessage>
    </validationRules>
</CustomObject>